rada bener dikit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 					<section id="gameComplete">
 							<p id="top">Waktu yang anda habiskan <span class="gameScore"></span>.</p>
-							<p><a class="gameReset button" href="">Main lagi</a></p>
+							<p><a class="gameReset button" href="">Main lagi?</a></p>
 					</section>
 					
 					<div id="cards">
