Insya Allah FINAL!

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
 <meta charset='utf-8'>
-<title>Trial Project</title>
+<title>Know Your RisTek</title>
 <link rel="stylesheet" href="css/pairs.css" />
 </head>
 <body>
